test/src/e2e_vm_tests/test_programs/should_pass/language/u32_ops/src/main.sw
script;

use core::ops::*;
use std::assert::assert;

fn main() -> bool {
    // TODO: thistbh
    true
}
