test/src/e2e_vm_tests/test_programs/should_fail/recover_unclosed_multiline_comment/src/main.sw
contract;

/
/ Comments

mod foo;
mod bar;
mod baz;

fn f() {
    /
    f2();
}

fn a() -> bool { 0 } // recovery witness

/*
/*
*/
